--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <style>
+        #district,
+        #state {
 
+            width: 100%;
+            padding: 10px;
+            border-radius: 3px;
+            outline: 1px solid #cccccc;
+            border-right: 8px solid transparent;
+
+        }
+    </style>
 </head>
 
 <body>
@@ -107,6 +118,29 @@
             </table>
 
             <button id="showForm">Show Form</button>
+        </div>
+
+        <div id="userModal" class="modal" style="display:none;">
+            <div class="modal-content">
+                <span class="close" id="modalClose" class="modalClassClose">&times;</span>
+                <h2>User Details</h2>
+                <hr>
+                <div class="flexDiv">
+                    <!-- <div> -->
+                    <p><strong>Name:</strong> <span id="modalName"></span></p>
+                    <p><strong>Age:</strong> <span id="modalAge"></span></p>
+                    <p><strong>District:</strong> <span id="modalDistrict"></span></p>
+                    <p><strong>State:</strong> <span id="modalState"></span></p>
+                    <!-- </div>
+                    <div> -->
+                    <p><strong>Contact Number:</strong> <span id="modalContact"></span></p>
+                    <p><strong>Gender:</strong> <span id="modalGender"></span></p>
+                    <p><strong>Adult:</strong> <span id="modalAdult"></span></p>
+                    <!-- <button id="closeModal" class="modalClassClose">Cancel</button> -->
+                    <!-- </div> -->
+                </div>
+            </div>
+
         </div>
     </div>
     <script src="script.js"></script>
