Adding emial and color

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
                 <legend>User Form</legend>
                 <form id="userForm">
                     <label for="username">Name</label>
-                    <input type="text" id="username" name="username">
+                    <input type="text" id="username" name="username" placeholder="Enter username">
                     <span class="error-message" id="usernameError">Please enter username!</span>
                     <label for="contact">Contact</label>
-                    <input type="text" id="contact" name="contact">
+                    <input type="text" id="contact" name="contact" placeholder="Enter your contact number">
                     <span class="error-message" id="contactError">Please fill the contact number!</span>
                     <label for="email">Email</label>
-                    <input type="text" id="email" name="email">
+                    <input type="text" id="email" name="email" placeholder="Enter your email">
                     <span class="error-message" id="emailError">Please fill the email!</span>
                     <label for="date">Date Of Birth</label>
                     <input type="date" id="date" name="date" min="1950-01-01" max="2024-01-31">
                     <span id="dateError" class="error-message">Please fill the date of birth!</span>
                     <label for="age">Age</label>
-                    <input type="text" id="age" name="age" readonly>
+                    <input type="text" id="age" name="age" placeholder="Your age" readonly>
                     <span class="error-message" id="ageError">Please fill the age!</span>
                     <!-- <label for="gender">Gender:</label>
                     <select name="gender" id="gender">
@@ -87,7 +87,7 @@
                     <span class="error-message" id="districtError">Please fill the district!</span>
 
                     <label for="address">Address</label>
-                    <textarea name="address" id="address"></textarea>
+                    <textarea name="address" id="address" placeholder="Enter your address"></textarea>
                     <span id="addressError" class="error-message">Please fill the address!</span>
                     <label for="adult">Are you an adult? </label>
 
